[package]
name = "pathkit"
version = "1.3.0"

authors = ["kiki-kanri"]
categories = ["filesystem"]
description = "Similar to the Path structure provided by python's pathlib, it provides various async/sync versions of file manipulation methods in addition to some of the std::Path built-in methods."
edition = "2021"
homepage = "https://github.com/kiki-kanri/rs-pathkit"
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords = [
  "filesystem",
  "path",
  "utils",
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/kiki-kanri/rs-pathkit"

# Lint rules
[lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cargo = { level = "warn", priority = -1 }
cast_ptr_alignment = "warn"
dbg_macro = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
items_after_statements = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
multiple_crate_versions = "allow"
mutex_atomic = "warn"
needless_for_each = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
todo = "warn"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_mut_passed = "deny"
unnecessary_sort_by = "deny"
unreadable_literal = "warn"
unused_async = "deny"
unused_self = "warn"
unwrap_used = "deny"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "allow"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "allow"
missing_crate_level_docs = "allow"
private_intra_doc_links = "allow"

# Dependencies
[dependencies]
anyhow = "1.0.102"
async-trait = { version = "0.1.89", optional = true }
filetime = "0.2.29"
path-absolutize = "3.1.1"
sea-orm = { version = "1.1.20", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "rt", "io-util"], optional = true }

[dev-dependencies]
libc = "0.2.186"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros"] }

# Features
[features]
## Define features
async-fs-ops = [
  "dep:async-trait",
  "dep:tokio",
]

sea-orm = ["dep:sea-orm"]

## Default and alias
default = []
all = [
  "async-fs-ops",
  "sea-orm",
]

full = ["all"]

# Profiles
[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"
